# Tazzin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: keep-alive.yml
app/: Início.py  __init__.py  main.py
app/core/: bootstrap.py  branding.py  comp_workset.py  config.py  exceptions.py  formatting.py  health.py  lancamentos.py  logging.py  metrics.py  navigation.py
app/database/: base.py
app/domain/: adjustments_rules.py  administration_rules.py  compensation_rules.py  finance_rules.py  inventory_rules.py  leads_rules.py  machining_rules.py  maintenance_rules.py  opportunity_rules.py  people_rules.py  production_rules.py  projects_rules.py  purchasing_rules.py  quality_rules.py  relationship_rules.py  sales_rules.py  scrap_rules.py
app/pages/: 0_Painel_Executivo.py  10_Administration.py  10_Administração.py  11_Relacionamento.py  12_Radar.py  13_Usinagem.py  14_Refugo.py  15_Ajustes.py  16_Cargos_e_Salários.py  17_Operadores.py  18_Descoberta_Mercado.py  19_Leads.py  1_Sales.py  1_Vendas.py  20_Licitacoes.py  2_Production.py  2_Produção.py  3_Estoque.py  3_Inventory.py  4_Compras.py  4_Purchasing.py  5_Finance.py  5_Financeiro.py  6_People.py  6_Pessoas.py  7_Projects.py  7_Projetos.py  8_Maintenance.py  8_Manutenção.py  9_Qualidade.py  9_Quality.py
app/repositories/: adjustments_repository.py  base.py  (+15 more)
docs/: ARCHITECTURE.md  DATA_GENERATION.md  DOCUMENTACAO_TECNICA.md  HOW_TO_RUN.md  MODULES.md
scripts/: generate_synthetic_data.py  init_db.py  keep_alive.py  run_health_check.py
tests/: conftest.py
(+81 files in other folders)
