[project]
name = "opsvision"
version = "1.0.0"
description = "Enterprise Operations Intelligence Platform — a layered, multi-module business platform built as a portfolio reference architecture."
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
